corrected link alignment on blog list

--- a/ca_blog.css
+++ b/ca_blog.css
@@ -28,6 +28,7 @@
     display: inline-block;
     padding: 5px;
 }
-.view-ca-blog .view-display-id-ca_blog_node_1 {
+
+.view-display-id-ca_blog_node_1 .views-field-view-node {
     float: left;
 }
